# e_commerce_Home_Work

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_utils_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_category_py.html  z_a44f0ac069e85531_test_product_py.html  z_a44f0ac069e85531_test_utils_py.html
src/: base_product.py  category.py  iteration_products.py  lawngrass.py  print_mixin.py  product.py  smartphone.py  utils.py
tests/: conftest.py  test_category.py  test_iteration_products.py  test_lawngrass.py  test_print_mixin.py  test_product.py  test_smartphone.py  test_utils.py
